@@ -1781,39 +1781,79 @@ static void _pack_assoc_shares_object(void *in, Buf buffer,
 {
 	association_shares_object_t *object = (association_shares_object_t *)in;
 
-	if(!object) {
-		pack32(0, buffer);
+	if (protocol_version >= SLURM_2_4_PROTOCOL_VERSION) {
+		if(!object) {
+			pack32(0, buffer);
 
-		packnull(buffer);
-		packnull(buffer);
-		packnull(buffer);
+			packnull(buffer);
+			packnull(buffer);
+			packnull(buffer);
 
-		packdouble(0, buffer);
-		pack32(0, buffer);
+			packdouble(0, buffer);
+			pack32(0, buffer);
 
-		packdouble(0, buffer);
-		packdouble(0, buffer);
-		pack64(0, buffer);
+			packdouble(0, buffer);
+			packdouble(0, buffer);
+			pack64(0, buffer);
 
-		pack16(0, buffer);
+			pack64(0, buffer);
 
-		return;
+			pack16(0, buffer);
+
+			return;
+		}
+
+		pack32(object->assoc_id, buffer);
+
+		packstr(object->cluster, buffer);
+		packstr(object->name, buffer);
+		packstr(object->parent, buffer);
+
+		packdouble(object->shares_norm, buffer);
+		pack32(object->shares_raw, buffer);
+
+		packdouble(object->usage_efctv, buffer);
+		packdouble(object->usage_norm, buffer);
+		pack64(object->usage_raw, buffer);
+
+		pack64(object->grp_cpu_mins, buffer);
+
+		pack16(object->user, buffer);
+	} else {
+		if(!object) {
+			pack32(0, buffer);
+
+			packnull(buffer);
+			packnull(buffer);
+			packnull(buffer);
+
+			packdouble(0, buffer);
+			pack32(0, buffer);
+
+			packdouble(0, buffer);
+			packdouble(0, buffer);
+			pack64(0, buffer);
+
+			pack16(0, buffer);
+
+			return;
+		}
+
+		pack32(object->assoc_id, buffer);
+
+		packstr(object->cluster, buffer);
+		packstr(object->name, buffer);
+		packstr(object->parent, buffer);
+
+		packdouble(object->shares_norm, buffer);
+		pack32(object->shares_raw, buffer);
+
+		packdouble(object->usage_efctv, buffer);
+		packdouble(object->usage_norm, buffer);
+		pack64(object->usage_raw, buffer);
+
+		pack16(object->user, buffer);
 	}
-
-	pack32(object->assoc_id, buffer);
-
-	packstr(object->cluster, buffer);
-	packstr(object->name, buffer);
-	packstr(object->parent, buffer);
-
-	packdouble(object->shares_norm, buffer);
-	pack32(object->shares_raw, buffer);
-
-	packdouble(object->usage_efctv, buffer);
-	packdouble(object->usage_norm, buffer);
-	pack64(object->usage_raw, buffer);
-
-	pack16(object->user, buffer);
 }
 
 static int _unpack_assoc_shares_object(void **object, Buf buffer,
@@ -1824,21 +1864,44 @@ static int _unpack_assoc_shares_object(void **object, Buf buffer,
 		xmalloc(sizeof(association_shares_object_t));
 
 	*object = (void *) object_ptr;
-	safe_unpack32(&object_ptr->assoc_id, buffer);
 
-	safe_unpackstr_xmalloc(&object_ptr->cluster, &uint32_tmp, buffer);
-	safe_unpackstr_xmalloc(&object_ptr->name, &uint32_tmp, buffer);
-	safe_unpackstr_xmalloc(&object_ptr->parent, &uint32_tmp, buffer);
+	if (protocol_version >= SLURM_2_4_PROTOCOL_VERSION) {
+		safe_unpack32(&object_ptr->assoc_id, buffer);
 
-	safe_unpackdouble(&object_ptr->shares_norm, buffer);
-	safe_unpack32(&object_ptr->shares_raw, buffer);
+		safe_unpackstr_xmalloc(&object_ptr->cluster,
+				       &uint32_tmp, buffer);
+		safe_unpackstr_xmalloc(&object_ptr->name, &uint32_tmp, buffer);
+		safe_unpackstr_xmalloc(&object_ptr->parent,
+				       &uint32_tmp, buffer);
 
-	safe_unpackdouble(&object_ptr->usage_efctv, buffer);
-	safe_unpackdouble(&object_ptr->usage_norm, buffer);
-	safe_unpack64(&object_ptr->usage_raw, buffer);
+		safe_unpackdouble(&object_ptr->shares_norm, buffer);
+		safe_unpack32(&object_ptr->shares_raw, buffer);
 
-	safe_unpack16(&object_ptr->user, buffer);
+		safe_unpackdouble(&object_ptr->usage_efctv, buffer);
+		safe_unpackdouble(&object_ptr->usage_norm, buffer);
+		safe_unpack64(&object_ptr->usage_raw, buffer);
 
+		safe_unpack64(&object_ptr->grp_cpu_mins, buffer);
+
+		safe_unpack16(&object_ptr->user, buffer);
+	} else {
+		safe_unpack32(&object_ptr->assoc_id, buffer);
+
+		safe_unpackstr_xmalloc(&object_ptr->cluster,
+				       &uint32_tmp, buffer);
+		safe_unpackstr_xmalloc(&object_ptr->name, &uint32_tmp, buffer);
+		safe_unpackstr_xmalloc(&object_ptr->parent,
+				       &uint32_tmp, buffer);
+
+		safe_unpackdouble(&object_ptr->shares_norm, buffer);
+		safe_unpack32(&object_ptr->shares_raw, buffer);
+
+		safe_unpackdouble(&object_ptr->usage_efctv, buffer);
+		safe_unpackdouble(&object_ptr->usage_norm, buffer);
+		safe_unpack64(&object_ptr->usage_raw, buffer);
+
+		safe_unpack16(&object_ptr->user, buffer);
+	}
 	return SLURM_SUCCESS;
 
 unpack_error:
